SonarQubeMajor - refactoring 4